# cpp_osx

./: .gitignore  README.md
WordRectMac/: CharFreqMap.cpp  CharFreqMap.hpp  CharMap.cpp  CharMap.hpp  TracNode.cpp  TracNode.hpp  TrieNode.cpp  TrieNode.hpp  TrixNode.cpp  TrixNode.hpp  TryNode.cpp  TryNode.hpp  WordLatticeFinder.cpp  WordLatticeFinder.hpp  WordRectFinder.cpp  WordRectFinder.hpp  WordRectPrinter.cpp  WordRectPrinter.hpp  WordRectSearchExec.cpp  WordRectSearchExec.hpp  WordRectSearchMgr.cpp  WordRectSearchMgr.hpp  WordTrie.cpp  WordTrie.hpp  WordWaffleFinder.cpp  WordWaffleFinder.hpp  WordWaffleFinderSearchA.cpp  tst3.cpp  wordPlatform.cpp  wordPlatform.h  wordRectMain.cpp  wordRectMain.hpp  wordRectSearchExec.cpp  wordRectSearchMgr.cpp  wordRectSearchMgr.hpp  wordTypes.h
WordRectMac/WordRectMac.xcodeproj/: project.pbxproj  sprax.mode1v3  sprax.pbxuser
WordRectMac/WordRectMac.xcodeproj/project.xcworkspace/xcuserdata/sprax.xcuserdatad/: UserInterfaceState.xcuserstate
WordRectMac/WordRectMac.xcodeproj/xcuserdata/sprax.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
WordRectMac/WordRectMac.xcodeproj/xcuserdata/sprax.xcuserdatad/xcschemes/: WordRectMac.xcscheme  xcschememanagement.plist
WorkPool/: WorkPool.cp  WorkPool.h  WorkPoolPriv.h  WorkPoolTarget.xcconfig  WorkPool_Prefix.pch.155r.mach
WorkPool/WorkPool.xcodeproj/: project.pbxproj
example/: CMakeLists.txt
example/example/: main.cpp
example/example.xcodeproj/: project.pbxproj
